baml_language/crates/baml_ide_tests/test_files/syntax/functions_v2/duplicate_names.baml
function Bar {
  input string
  output string
}

function Bar(a: string, b: int | bool) -> int {
  client Bar
  prompt #"fa"#
}

// error: The function "Bar" cannot be re-defined because a function with that name already exists.
//   -->  functions_v2/duplicate_names.baml:1
//    | 
//    | 
//  1 | function Bar {
//    | 
//   -->  functions_v2/duplicate_names.baml:6
//    | 
//  5 | 
//  6 | function Bar(a: string, b: int | bool) -> int {
//    | 
// error: The function "Bar" cannot be re-defined because a function with that name already exists.
//   -->  functions_v2/duplicate_names.baml:6
//    | 
//  5 | 
//  6 | function Bar(a: string, b: int | bool) -> int {
//    | 
//   -->  functions_v2/duplicate_names.baml:1
//    | 
//    | 
//  1 | function Bar {
//    | 
// error: Invalid syntax for function "Bar". Use:
// function Bar(params...) -> ReturnType { ... }
//   -->  functions_v2/duplicate_names.baml:1
//    | 
//    | 
//  1 | function Bar {
//    | 
// error: Error validating: Unknown field `input` in function
//   -->  functions_v2/duplicate_names.baml:2
//    | 
//  1 | function Bar {
//  2 |   input string
//    | 
// error: Error validating: Unknown field `output` in function
//   -->  functions_v2/duplicate_names.baml:3
//    | 
//  2 |   input string
//  3 |   output string
//    | 
// error: Error validating: Missing `prompt` and `client` fields in function. Add to the block:
// ```
// client GPT4
// prompt #"..."#
// ```
//   -->  functions_v2/duplicate_names.baml:1
//    | 
//    | 
//  1 | function Bar {
//    |

//----
//- diagnostics
// Error: Old-style function syntax. Use: function Name(params...) -> ReturnType { ... }
//    в•­в”Ђ[ functions_v2_duplicate_names.baml:1:14 ]
//    в”‚
//  1 в”‚ function Bar {
//    в”‚              в”¬  
//    в”‚              в•°в”Ђв”Ђ Old-style function syntax. Use: function Name(params...) -> ReturnType { ... }
//    в”‚ 
//    в”‚ Note: Error code: E0010
// в”Ђв”Ђв”Ђв•Ї
// Error: Duplicate function `Bar`
//    в•­в”Ђ[ functions_v2_duplicate_names.baml:1:10 ]
//    в”‚
//  1 в”‚ function Bar {
//    в”‚          в”Ђв”¬в”Ђ  
//    в”‚           в•°в”Ђв”Ђв”Ђ function `Bar` redefined here
//    в”‚ 
//  6 в”‚ function Bar(a: string, b: int | bool) -> int {
//    в”‚          в”Ђв”¬в”Ђ  
//    в”‚           в•°в”Ђв”Ђв”Ђ `Bar` first defined in functions_v2_duplicate_names.baml
//    в”‚ 
//    в”‚ Note: Error code: E0011
// в”Ђв”Ђв”Ђв•Ї
// Error: Duplicate function `Bar`
//    в•­в”Ђ[ functions_v2_duplicate_names.baml:6:10 ]
//    в”‚
//  6 в”‚ function Bar(a: string, b: int | bool) -> int {
//    в”‚          в”Ђв”¬в”Ђ  
//    в”‚           в•°в”Ђв”Ђв”Ђ function `Bar` redefined here
//    в”‚
//    в”њв”Ђ[ functions_v2_duplicate_names.baml:6:10 ]
//    в”‚
//  1 в”‚ function Bar {
//    в”‚          в”Ђв”¬в”Ђ  
//    в”‚           в•°в”Ђв”Ђв”Ђ `Bar` first defined in functions_v2_duplicate_names.baml
//    в”‚ 
//    в”‚ Note: Error code: E0011
// в”Ђв”Ђв”Ђв•Ї
// Error: Unknown variable `input`
//    в•­в”Ђ[ functions_v2_duplicate_names.baml:2:3 ]
//    в”‚
//  2 в”‚   input string
//    в”‚   в”Ђв”Ђв”¬в”Ђв”Ђ  
//    в”‚     в•°в”Ђв”Ђв”Ђв”Ђ Unknown variable `input`
//    в”‚ 
//    в”‚ Note: Error code: E0003
// в”Ђв”Ђв”Ђв•Ї
// Error: Unknown variable `string`
//    в•­в”Ђ[ functions_v2_duplicate_names.baml:2:9 ]
//    в”‚
//  2 в”‚   input string
//    в”‚         в”Ђв”Ђв”Ђв”¬в”Ђв”Ђ  
//    в”‚            в•°в”Ђв”Ђв”Ђв”Ђ Unknown variable `string`
//    в”‚ 
//    в”‚ Note: Error code: E0003
// в”Ђв”Ђв”Ђв•Ї
// Error: Unknown variable `output`
//    в•­в”Ђ[ functions_v2_duplicate_names.baml:3:3 ]
//    в”‚
//  3 в”‚   output string
//    в”‚   в”Ђв”Ђв”Ђв”¬в”Ђв”Ђ  
//    в”‚      в•°в”Ђв”Ђв”Ђв”Ђ Unknown variable `output`
//    в”‚ 
//    в”‚ Note: Error code: E0003
// в”Ђв”Ђв”Ђв•Ї
// Error: Unknown variable `string`
//    в•­в”Ђ[ functions_v2_duplicate_names.baml:3:10 ]
//    в”‚
//  3 в”‚   output string
//    в”‚          в”Ђв”Ђв”Ђв”¬в”Ђв”Ђ  
//    в”‚             в•°в”Ђв”Ђв”Ђв”Ђ Unknown variable `string`
//    в”‚ 
//    в”‚ Note: Error code: E0003
// в”Ђв”Ђв”Ђв•Ї
// Error: Unknown variable `input`
//    в•­в”Ђ[ functions_v2_duplicate_names.baml:2:3 ]
//    в”‚
//  2 в”‚   input string
//    в”‚   в”Ђв”Ђв”¬в”Ђв”Ђ  
//    в”‚     в•°в”Ђв”Ђв”Ђв”Ђ Unknown variable `input`
//    в”‚ 
//    в”‚ Note: Error code: E0003
// в”Ђв”Ђв”Ђв•Ї
// Error: Unknown variable `string`
//    в•­в”Ђ[ functions_v2_duplicate_names.baml:2:9 ]
//    в”‚
//  2 в”‚   input string
//    в”‚         в”Ђв”Ђв”Ђв”¬в”Ђв”Ђ  
//    в”‚            в•°в”Ђв”Ђв”Ђв”Ђ Unknown variable `string`
//    в”‚ 
//    в”‚ Note: Error code: E0003
// в”Ђв”Ђв”Ђв•Ї
// Error: Unknown variable `output`
//    в•­в”Ђ[ functions_v2_duplicate_names.baml:3:3 ]
//    в”‚
//  3 в”‚   output string
//    в”‚   в”Ђв”Ђв”Ђв”¬в”Ђв”Ђ  
//    в”‚      в•°в”Ђв”Ђв”Ђв”Ђ Unknown variable `output`
//    в”‚ 
//    в”‚ Note: Error code: E0003
// в”Ђв”Ђв”Ђв•Ї
// Error: Unknown variable `string`
//    в•­в”Ђ[ functions_v2_duplicate_names.baml:3:10 ]
//    в”‚
//  3 в”‚   output string
//    в”‚          в”Ђв”Ђв”Ђв”¬в”Ђв”Ђ  
//    в”‚             в•°в”Ђв”Ђв”Ђв”Ђ Unknown variable `string`
//    в”‚ 
//    в”‚ Note: Error code: E0003
// в”Ђв”Ђв”Ђв•Ї
